--- a/ban.html
+++ b/ban.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <button onclick="location.href='ban.html'">Bàn ăn</button>
+    <button onclick="location.href='index.html'">Bàn ăn</button>
     <button onclick="location.href='dat_mon.html'">Đặt món</button>
     <button onclick="location.href='thuc_don.html'">Thực đơn</button>
   </nav>
